@@ -13,7 +13,7 @@
  * Copyright (c) 2009-2012,
  * University of Oregon, Eugene, USA
  *
- * Copyright (c) 2009-2012, 2013, 2017-2018,
+ * Copyright (c) 2009-2012, 2013, 2017-2018, 2020,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2009-2012,
@@ -97,64 +97,59 @@ visit_to_switches( scorep_profile_node* node,
 }
 
 static scorep_profile_node*
-chroot_tasks( SCOREP_Profile_LocationData* location,
-              scorep_profile_node*         tasksRoot,
-              scorep_profile_node*         task )
+change_root_node( SCOREP_Profile_LocationData* location,
+                  scorep_profile_node*         root,
+                  SCOREP_RegionHandle          rootRegion,
+                  scorep_profile_node_type     rootType,
+                  scorep_profile_node*         node,
+                  bool                         addInclusiveTime )
 {
-    /* Register the region handle on first visit */
-    static SCOREP_RegionHandle root_region = SCOREP_INVALID_REGION;
-    if ( root_region == SCOREP_INVALID_REGION )
-    {
-        root_region = SCOREP_Definitions_NewRegion( "TASKS",
-                                                    NULL,
-                                                    SCOREP_INVALID_SOURCE_FILE,
-                                                    SCOREP_INVALID_LINE_NO,
-                                                    SCOREP_INVALID_LINE_NO,
-                                                    SCOREP_PARADIGM_MEASUREMENT,
-                                                    SCOREP_REGION_ARTIFICIAL );
-    }
-
     /* Create root nodes for each new location */
-    scorep_profile_node* program_root = NULL;
-    scorep_profile_node* tasks_root   = NULL;
-    if ( tasksRoot == NULL )
+    scorep_profile_node* program_root    = NULL;
+    scorep_profile_node* artificial_root = NULL;
+    if ( root == NULL )
     {
         scorep_profile_type_data_t program_region_data;
         memset( &program_region_data, 0, sizeof( program_region_data ) );
         scorep_profile_type_set_region_handle( &program_region_data, SCOREP_GetProgramRegion() );
         program_root = scorep_profile_create_node( location,
                                                    NULL,
-                                                   SCOREP_PROFILE_NODE_TASK_ROOT,
+                                                   rootType,
                                                    program_region_data,
                                                    SCOREP_GetBeginEpoch(),
                                                    false );
 
         scorep_profile_type_data_t root_region_data;
         memset( &root_region_data, 0, sizeof( root_region_data ) );
-        scorep_profile_type_set_region_handle( &root_region_data, root_region );
-        tasks_root = scorep_profile_create_node( location,
-                                                 NULL,
-                                                 SCOREP_PROFILE_NODE_TASK_ROOT,
-                                                 root_region_data,
-                                                 UINT64_MAX, false );
-        scorep_profile_add_child( program_root, tasks_root );
+        scorep_profile_type_set_region_handle( &root_region_data, rootRegion );
+        artificial_root = scorep_profile_create_node( location,
+                                                      NULL,
+                                                      rootType,
+                                                      root_region_data,
+                                                      UINT64_MAX, false );
+        scorep_profile_add_child( program_root, artificial_root );
     }
     else
     {
-        program_root = tasksRoot;
+        program_root = root;
         UTILS_BUG_ON( program_root->first_child == NULL );
-        tasks_root = program_root->first_child;
+        artificial_root = program_root->first_child;
+    }
+
+    if ( addInclusiveTime )
+    {
+        scorep_profile_merge_node_dense( program_root, node );
     }
 
     /* move task tree to task_root */
-    scorep_profile_remove_node( task );
-    scorep_profile_add_child( tasks_root, task );
-    scorep_profile_merge_node_inclusive( tasks_root, task );
+    scorep_profile_remove_node( node );
+    scorep_profile_add_child( artificial_root, node );
+    scorep_profile_merge_node_inclusive( artificial_root, node );
 
     /* give the task root the timestamp of the first task */
-    if ( task->first_enter_time < tasks_root->first_enter_time )
+    if ( node->first_enter_time < artificial_root->first_enter_time )
     {
-        tasks_root->first_enter_time = task->first_enter_time;
+        artificial_root->first_enter_time = node->first_enter_time;
     }
     return program_root;
 }
@@ -168,36 +163,106 @@ scorep_profile_process_tasks( void )
 
     while ( thread_root != NULL )
     {
-        scorep_profile_node* next      = NULL;
-        scorep_profile_node* node      = thread_root->first_child;
-        scorep_profile_node* task_root = NULL;
+        scorep_profile_node* next         = NULL;
+        scorep_profile_node* node         = thread_root->first_child;
+        scorep_profile_node* tasks_root   = NULL;
+        scorep_profile_node* threads_root = NULL;
+        scorep_profile_node* kernels_root = NULL;
         location = scorep_profile_type_get_location_data( thread_root->type_specific_data );
         while ( node != NULL )
         {
             next = node->next_sibling;
+            if ( node->node_type == SCOREP_PROFILE_NODE_REGULAR_REGION )
+            {
+                SCOREP_RegionHandle region_handle = scorep_profile_type_get_region_handle( node->type_specific_data );
+                if ( region_handle != SCOREP_GetProgramRegion() )
+                {
+                    SCOREP_LocationType location_type = SCOREP_Location_GetType( location->location_data );
 
-            /* If not a task root, traverse tree and process all task pointers */
-            if ( node->node_type != SCOREP_PROFILE_NODE_TASK_ROOT )
-            {
-                /*
-                   scorep_profile_for_all( node,
-                                        visit_to_switches,
-                                        location );
-                 */
+                    if ( location_type == SCOREP_LOCATION_TYPE_CPU_THREAD )
+                    {
+                        /* Register the region handle on first visit */
+                        static SCOREP_RegionHandle threads_root_region = SCOREP_INVALID_REGION;
+                        if ( threads_root_region == SCOREP_INVALID_REGION )
+                        {
+                            threads_root_region = SCOREP_Definitions_NewRegion( "THREADS",
+                                                                                NULL,
+                                                                                SCOREP_INVALID_SOURCE_FILE,
+                                                                                SCOREP_INVALID_LINE_NO,
+                                                                                SCOREP_INVALID_LINE_NO,
+                                                                                SCOREP_PARADIGM_PTHREAD,
+                                                                                SCOREP_REGION_ARTIFICIAL );
+                        }
+                        threads_root = change_root_node( location,
+                                                         threads_root,
+                                                         threads_root_region,
+                                                         SCOREP_PROFILE_NODE_TASK_ROOT,
+                                                         node,
+                                                         true );
+                    }
+                    if ( location_type == SCOREP_LOCATION_TYPE_GPU )
+                    {
+                        /* Register the region handle on first visit */
+                        static SCOREP_RegionHandle kernels_root_region = SCOREP_INVALID_REGION;
+                        if ( kernels_root_region == SCOREP_INVALID_REGION )
+                        {
+                            kernels_root_region = SCOREP_Definitions_NewRegion( "KERNELS",
+                                                                                NULL,
+                                                                                SCOREP_INVALID_SOURCE_FILE,
+                                                                                SCOREP_INVALID_LINE_NO,
+                                                                                SCOREP_INVALID_LINE_NO,
+                                                                                SCOREP_RegionHandle_GetParadigmType( region_handle ),
+                                                                                SCOREP_REGION_ARTIFICIAL );
+                        }
+
+                        kernels_root = change_root_node( location,
+                                                         kernels_root,
+                                                         kernels_root_region,
+                                                         SCOREP_PROFILE_NODE_TASK_ROOT,
+                                                         node,
+                                                         true );
+                    }
+                }
             }
-            /* Else move the task tree to a common root */
-            else
+            if ( node->node_type == SCOREP_PROFILE_NODE_TASK_ROOT )
             {
-                task_root = chroot_tasks( location, task_root, node );
+                SCOREP_RegionHandle region_handle = scorep_profile_type_get_region_handle( node->type_specific_data );
+                /* Register the region handle on first visit */
+                static SCOREP_RegionHandle tasks_root_region = SCOREP_INVALID_REGION;
+                if ( tasks_root_region == SCOREP_INVALID_REGION )
+                {
+                    tasks_root_region = SCOREP_Definitions_NewRegion( "TASKS",
+                                                                      NULL,
+                                                                      SCOREP_INVALID_SOURCE_FILE,
+                                                                      SCOREP_INVALID_LINE_NO,
+                                                                      SCOREP_INVALID_LINE_NO,
+                                                                      SCOREP_RegionHandle_GetParadigmType( region_handle ),
+                                                                      SCOREP_REGION_ARTIFICIAL );
+                }
+
+                tasks_root = change_root_node( location,
+                                               tasks_root,
+                                               tasks_root_region,
+                                               SCOREP_PROFILE_NODE_TASK_ROOT,
+                                               node,
+                                               false );
             }
 
             node = next;
         }
 
-        /* If tasks occurred, add the task tree to the thread */
-        if ( task_root != NULL )
+        /* If tasks, threads or kernels roots were created, add them to the thread_root */
+        if ( tasks_root != NULL )
         {
-            scorep_profile_add_child( thread_root, task_root );
+            scorep_profile_add_child( thread_root, tasks_root );
+        }
+        if ( threads_root != NULL )
+        {
+            scorep_profile_add_child( thread_root, threads_root );
+        }
+        if ( kernels_root != NULL )
+        {
+            scorep_profile_add_child( thread_root, kernels_root );
         }
 
         thread_root = thread_root->next_sibling;
