@@ -36,6 +36,9 @@ Bugfixes:
 - Fix aborts when user library wrapper were first called in a thread
   parallel context.
 
+- Unify and fix representation of artificial root nodes for threads,
+  GPU kernels, and OpenMP tasks in profiling.
+
 ------------------- Released version 6.0 -----------------------------
 
 Major features:
